Overhaul domain types.
Identifiers and events as records where possible.

InventoryItem uses dedicated identifier and registers an InventoryItemAdded event on creation of new items.

Remove InvventoryItemCreationListener as it's a leftover from Salespoint.